--- a/config/default_collections.yml
+++ b/config/default_collections.yml
@@ -5,10 +5,10 @@
 # group: LDAP group(s) that should have access
 - name: Editorial Photography
   description: Born digital photographs of people, events, exhibitions, and the building.
-  groups: photography
+  groups: photostudio
 - name: Object Photography
   description: Born digital photographs of objects in the CMA collection.  
-  groups: photography
-- name: Conversation Photography
+  groups: photostudio
+- name: Conservation Photography
   description: Photographs taken by conservation department staff such as before and after treatment photographs
   groups: conservation 
