--- a/config/default_collections.yml
+++ b/config/default_collections.yml
@@ -3,12 +3,12 @@
 # name: Title for collection
 # description: Brief description
 # group: LDAP group(s) that should have access
-- name: Editorial Photography
+- title: Editorial Photography
   description: Born digital photographs of people, events, exhibitions, and the building.
   groups: photostudio
-- name: Object Photography
+- title: Object Photography
   description: Born digital photographs of objects in the CMA collection.  
   groups: photostudio
-- name: Conservation Photography
+- title: Conservation Photography
   description: Photographs taken by conservation department staff such as before and after treatment photographs
   groups: conservation 
